--- a/ucds-pro-hw3.0-obd2-sniffer.ioc
+++ b/ucds-pro-hw3.0-obd2-sniffer.ioc
@@ -8,14 +8,13 @@ ADC1.master=1
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
-CAN1.CalculateBaudRate=749999
-CAN1.CalculateTimeBit=1333
-CAN1.CalculateTimeQuantum=444.44444444444446
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
-CAN2.CalculateBaudRate=749999
-CAN2.CalculateTimeBit=1333
-CAN2.CalculateTimeQuantum=444.44444444444446
-CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+CAN2.BS1=CAN_BS1_3TQ
+CAN2.BS2=CAN_BS2_4TQ
+CAN2.CalculateBaudRate=500000
+CAN2.CalculateTimeBit=2000
+CAN2.CalculateTimeQuantum=250.0
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
+CAN2.Prescaler=9
 File.Version=6
 IWDG.IPParameters=Prescaler
 IWDG.Prescaler=IWDG_PRESCALER_16
@@ -23,15 +22,14 @@ KeepUserPlacement=false
 Mcu.CPN=STM32F105RBT6
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
-Mcu.IP1=CAN1
-Mcu.IP2=CAN2
-Mcu.IP3=IWDG
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=USB_DEVICE
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP1=CAN2
+Mcu.IP2=IWDG
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=USB_DEVICE
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32F105R(8-B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
@@ -64,6 +62,8 @@ Mcu.UserName=STM32F105RBTx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.CAN2_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.CAN2_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -87,13 +87,19 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=USB_SENSE
 PA9.Locked=true
 PA9.Signal=GPIO_Input
-PB10.GPIOParameters=GPIO_Label
+PB10.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB10.GPIO_Label=LED_BLUE
+PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB10.GPIO_PuPd=GPIO_NOPULL
 PB10.Locked=true
+PB10.PinState=GPIO_PIN_SET
 PB10.Signal=GPIO_Output
-PB11.GPIOParameters=GPIO_Label
+PB11.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB11.GPIO_Label=LED_GREEN
+PB11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB11.GPIO_PuPd=GPIO_NOPULL
 PB11.Locked=true
+PB11.PinState=GPIO_PIN_SET
 PB11.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=HS_CAN2_RX
@@ -103,18 +109,21 @@ PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=HS_CAN2_TX
 PB13.Mode=CAN_Activate
 PB13.Signal=CAN2_TX
-PB2.GPIOParameters=GPIO_Label
+PB2.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB2.GPIO_Label=LED_RED
+PB2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB2.GPIO_PuPd=GPIO_NOPULL
 PB2.Locked=true
+PB2.PinState=GPIO_PIN_SET
 PB2.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=MS_STB
 PB3.Locked=true
-PB3.Signal=GPIO_Output
+PB3.Signal=GPIO_Analog
 PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=MM_STB
 PB4.Locked=true
-PB4.Signal=GPIO_Output
+PB4.Signal=GPIO_Analog
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=MM_CAN2_RX
 PB5.Locked=true
@@ -126,15 +135,15 @@ PB6.Signal=GPIO_Output
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=HS_STB
 PB7.Locked=true
-PB7.Signal=GPIO_Output
+PB7.Signal=GPIO_Analog
 PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=MS_CAN1_RX
-PB8.Mode=CAN_Activate
-PB8.Signal=CAN1_RX
+PB8.Locked=true
+PB8.Signal=GPIO_Analog
 PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=MS_CAN1_TX
-PB9.Mode=CAN_Activate
-PB9.Signal=CAN1_TX
+PB9.Locked=true
+PB9.Signal=GPIO_Analog
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=ACC_ADC_IN
 PC0.Locked=true
@@ -174,7 +183,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_IWDG_Init-IWDG-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_CAN2_Init-CAN2-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_IWDG_Init-IWDG-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
