--- a/ucds-pro-hw3.0-obd2-sniffer.ioc
+++ b/ucds-pro-hw3.0-obd2-sniffer.ioc
@@ -116,14 +116,20 @@ PB2.GPIO_PuPd=GPIO_NOPULL
 PB2.Locked=true
 PB2.PinState=GPIO_PIN_SET
 PB2.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_Label
+PB3.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB3.GPIO_Label=MS_STB
+PB3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB3.GPIO_PuPd=GPIO_NOPULL
 PB3.Locked=true
-PB3.Signal=GPIO_Analog
-PB4.GPIOParameters=GPIO_Label
+PB3.PinState=GPIO_PIN_SET
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB4.GPIO_Label=MM_STB
+PB4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB4.GPIO_PuPd=GPIO_NOPULL
 PB4.Locked=true
-PB4.Signal=GPIO_Analog
+PB4.PinState=GPIO_PIN_SET
+PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=MM_CAN2_RX
 PB5.Locked=true
@@ -132,10 +138,13 @@ PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=MM_CAN2_TX
 PB6.Locked=true
 PB6.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label
+PB7.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB7.GPIO_Label=HS_STB
+PB7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB7.GPIO_PuPd=GPIO_NOPULL
 PB7.Locked=true
-PB7.Signal=GPIO_Analog
+PB7.PinState=GPIO_PIN_SET
+PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=MS_CAN1_RX
 PB8.Locked=true
