--- a/ucds-pro-hw3.0-obd2-sniffer.ioc
+++ b/ucds-pro-hw3.0-obd2-sniffer.ioc
@@ -8,14 +8,19 @@ ADC1.master=1
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
+CAN2.ABOM=ENABLE
+CAN2.AWUM=ENABLE
 CAN2.BS1=CAN_BS1_3TQ
 CAN2.BS2=CAN_BS2_4TQ
 CAN2.CalculateBaudRate=500000
 CAN2.CalculateTimeBit=2000
 CAN2.CalculateTimeQuantum=250.0
-CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,SJW,Mode,AWUM,ABOM
+CAN2.Mode=CAN_MODE_NORMAL
 CAN2.Prescaler=9
+CAN2.SJW=CAN_SJW_1TQ
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 IWDG.IPParameters=Prescaler
 IWDG.Prescaler=IWDG_PRESCALER_16
 KeepUserPlacement=false
