Switch unused MM can RX|TX pins as analog

--- a/ucds-pro-hw3.0-obd2-sniffer.ioc
+++ b/ucds-pro-hw3.0-obd2-sniffer.ioc
@@ -138,11 +138,11 @@ PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=MM_CAN2_RX
 PB5.Locked=true
-PB5.Signal=GPIO_Input
+PB5.Signal=GPIO_Analog
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=MM_CAN2_TX
 PB6.Locked=true
-PB6.Signal=GPIO_Output
+PB6.Signal=GPIO_Analog
 PB7.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB7.GPIO_Label=HS_STB
 PB7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
